--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -10,12 +10,16 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+        python-version: [3.8]
         poetry-version: [1.3.1]
 
     steps:
       - uses: actions/checkout@v3
       - name: Prepare repository
         run: git fetch --unshallow --tags
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -25,10 +29,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - name: Install NPM dependencies
-        run: npm ci
-      - name: Install Poetry dependencies
-        run: poetry install
+      - name: Install Poetry & NPM dependencies
+        run: make install
       - name: Build CLI & Python package
         run: make package
       - name: Release
