--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ packages = [{ include = "imaginex-lambda" }]
 python = "~3.8"
 pillow = "^9.3.0"
 requests = "^2.28.1"
-boto3 = "^1.26.35"
+botocore = "^1.29.41"
 filetype = "^1.2.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
